force-app/main/default/objects/Lab_Materials__c/Lab_Materials__c.object-meta.xml
<CustomObject>
    <label>Lab Material</label>
    <nameField>
        <label>Lab Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lab Materials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>