force-app/main/default/objects/Lab_Materials__c/fields/BioTang_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>BioTang_Disclosure__c</fullName>
    <label>BioTang Disclosure</label>
    <referenceTo>BioTang_Disclosure__c</referenceTo>
    <relationshipLabel>Lab Materials</relationshipLabel>
    <relationshipName>Lab_Materials</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>