force-app/main/default/objects/Lab_Materials__c/fields/Material_Obtained_Other_Desc__c.field-meta.xml
<CustomField>
    <fullName>Material_Obtained_Other_Desc__c</fullName>
    <label>Material Obtained Other Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>